cabecera,menu y que es

--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 		<title></title>
 		<meta charset="utf-8">
 		<meta name="autor" content="JP">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<title>COVID-19</title>
 	</head>
 	<body>
-		
+		<header>
+			<img src="img/hiclipart.com.png">
+			<h1>COVID-19</h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="#">Colombia</a></li>
+				<li><a href="#">Cuidados  |</a></li>
+				<li><a href="#">Síntomas  |</a></li>
+				<li><a href="#">Que es  |</a></li>
+				<li><a href="#">Home  |</a></li>
+			</ul>
+		</nav>
+		<section>
+			<h2>Que es el COVID-19</h2>
+			<div class="contenedor">
+				<p>La COVID-19 es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto este nuevo virus como la enfermedad que provoca eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019. Actualmente la COVID-19 es una pandemia que afecta a muchos países de todo el mundo.</p>
+				<button>Ver mas</button>
+			</div>
+			<img src="https://www.sociedadcirugiaocular.com/images/img-coronavirus-covid19.jpg">
+		</section>
 	</body>
 </html>
