--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
 			</ul>
 		</nav>
 		<section>
-			<h2>Que es el COVID-19</h2>
-			<div class="contenedor">
-				<p>La COVID-19 es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto este nuevo virus como la enfermedad que provoca eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019. Actualmente la COVID-19 es una pandemia que afecta a muchos países de todo el mundo.</p>
-				<button>Ver mas</button>
+			<div class="que-es">
+				<div class="contenedor">
+					<h2>Que es el COVID-19</h2>
+					<p>La COVID-19 es la enfermedad infecciosa causada por el coronavirus que se ha descubierto más recientemente. Tanto este nuevo virus como la enfermedad que provoca eran desconocidos antes de que estallara el brote en Wuhan (China) en diciembre de 2019. Actualmente la COVID-19 es una pandemia que afecta a muchos países de todo el mundo.</p>
+					<button>Ver mas</button>
+				</div>
+				<img src="https://www.sociedadcirugiaocular.com/images/img-coronavirus-covid19.jpg">
 			</div>
-			<img src="https://www.sociedadcirugiaocular.com/images/img-coronavirus-covid19.jpg">
+			<div class="sintomas">
+				<div class="contenedor">
+					<h2>Cuales son los síntomas</h2>
+					<p>Los síntomas más habituales de la COVID-19 son la fiebre, la tos seca y el cansancio. Otros síntomas menos frecuentes que afectan a algunos pacientes son los dolores y molestias, la congestión nasal, el dolor de cabeza, la conjuntivitis, el dolor de garganta, la diarrea, la pérdida del gusto o el olfato y las erupciones cutáneas o cambios de color en los dedos de las manos o los pies. Estos síntomas suelen ser leves y comienzan gradualmente. Algunas de las personas infectadas solo presentan síntomas levísimos.</p>
+					<button>Ver mas</button>
+				</div>
+				<img src="https://www.65ymas.com/uploads/s1/41/61/97/bigstock-lung-virus-infection-and-coron-350084953.jpeg">
+			</div>
 		</section>
 	</body>
 </html>
